alteracao da foto

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(/coxinha.jpg);
+            background-image: url(/coxinha1.jpg);
           }
         </style>
         <!-- Bootstrap core JS-->
